--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -28,8 +28,9 @@
   --color-gray-900: #1b1d27;
   --color-gray-950: #13141b;
 
-  --font-display: "Inter", "sans-serif";
-  --font-sans: "Inter", "sans-serif";
+  --font-display: var(--font-tusker);
+  --font-sans: var(--font-inter);
+  --font-mono: var(--font-jetbrains-mono);
 
   --default-transition-duration: 250ms;
 }
