--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -10,27 +10,19 @@
 @theme {
   --shadow-layer: 0 35px 60px -15px rgba(0, 0, 0, 0.3);
 
-  --color-framework: #000;
   --color-black: #0b0b0b;
   --color-white: #fff;
-  --color-brand: #f50;
-  --color-blue: #0052ff;
-  --color-yellow: #cdea19;
-  --color-gray-50: #f6f6f8;
-  --color-gray-100: #eeeef1;
-  --color-gray-200: #e3e4e8;
-  --color-gray-300: #bbbdc9;
-  --color-gray-400: #9499ad;
-  --color-gray-500: #727892;
-  --color-gray-600: #515870;
-  --color-gray-700: #383d51;
-  --color-gray-800: #252837;
-  --color-gray-900: #1b1d27;
-  --color-gray-950: #13141b;
+  --color-primary: #eb110A;
 
   --font-display: var(--font-tusker);
   --font-sans: var(--font-inter);
   --font-mono: var(--font-jetbrains-mono);
+  /**
+    TODO: move this fontSize definition into tailwind.config.ts
+  **/
+  --text-h1: 150px;
+  --text-h1-font-family: var(--font-tusker);
+  --text-h1-font-weight: 700;
 
   --default-transition-duration: 250ms;
 }
