--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,9 +2,12 @@
 
 @plugin "@tailwindcss/typography";
 
+html {
+  @apply bg-[#0b0b0b];
+}
+
 @utility container {
-  margin: 0 auto;
-  padding: 0 2rem;
+  margin: 0 1.25rem;
 }
 
 @theme {
