--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -7,7 +7,8 @@ html {
 }
 
 @utility container {
-  margin: 0 1.25rem;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
 @theme {
@@ -27,5 +28,5 @@ html {
   --text-h1-font-family: var(--font-tusker);
   --text-h1-font-weight: 700; */
 
-  --default-transition-duration: 250ms;
+  --default-transition-duration: 280ms;
 }
