--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -13,6 +13,10 @@
 }
 
 html {
+  /**
+  * Position relative to fix react warning https://github.com/motiondivision/motion/issues/1853#issuecomment-2122841818
+  **/
+  position: relative;
   @apply bg-[#0b0b0b];
   overflow-x: hidden;
   scroll-behavior: smooth;
