--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -19,7 +19,6 @@ html {
   position: relative;
   @apply bg-[#0b0b0b];
   overflow-x: hidden;
-  scroll-behavior: smooth;
 }
 
 @utility container {
@@ -44,4 +43,14 @@ html {
 /* Disable default cursor */
 * {
   cursor: none;
+}
+
+.no-scroll {
+  overflow: hidden;             /* disables scroll */
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE/Edge */
+}
+
+.no-scroll::-webkit-scrollbar {
+  display: none;                /* Chrome/Safari */
 }
