--- a/app/globals.css
+++ b/app/globals.css
@@ -17,8 +17,9 @@ html {
   * Position relative to fix react warning https://github.com/motiondivision/motion/issues/1853#issuecomment-2122841818
   **/
   position: relative;
-  @apply bg-[#0b0b0b];
+  @apply bg-black;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 @utility container {
